syntax = "proto3";

package cz.proto;

message TimeRange {
  int64 start_time = 1;
  int64 end_time = 2;
}